Ensure main section text is not cut off

--- a/pycascades/static/css/pycascades/pycascades.css
+++ b/pycascades/static/css/pycascades/pycascades.css
@@ -397,7 +397,7 @@ header nav {
 }
 #main section .main {
     position: relative;
-    height: 100vh;
+    min-height: 100vh;
 }
 #main section .main .row {
     text-align: left;
